# YOLO-Master

./: .gitignore  MoE_Depth_Analysis_Report.md  MoLoRA_Review_Structured_Analysis.md  README.md  README_CN.md  YOLO-PEFT-论文补强方案-v1.md  YOLO-PEFT_实验矩阵覆盖度与缺口分析.md  YOLO_Master_MoA_MoE_MoT_PEFT_深度综合分析报告.md  YOLO_Master_MoA_MoE_MoT_PEFT_深度综合分析报告_v2.md  coverage.json  debug-router-nan-activations.md  index.html  issue_111_reply.md  model-zoo.html  mot_deep_analysis_report.md  pyproject.toml  wiki-en.html  wiki-zh.html  yolo_peft_paper_extracted.md
.github/ISSUE_TEMPLATE/: model-zoo-submission.yml
.github/PULL_REQUEST_TEMPLATE/: model-zoo-submission.md
.github/workflows/: ci.yml  deploy-wiki-pages.yml  model-zoo-benchmark.yml  model-zoo-metadata.yml  repowiki.yml
.plan/: domain-specific-lora-tuning.md
.plan_archive/: mot-hybrid-architecture.md
assets/css/: model-zoo.css  style.css
assets/js/: model-zoo.js
benchmarks/: __init__.py  benchmark_molora_dispatch.py  benchmark_mot_dispatch.py  mixture_baselines.yaml  run.py  suite.py  suites.yaml
docs/: moe_pruning_dynamic_schedule.md  molora_guide.md  mot_integration_experiment_report_2026-06-25.md  windows_cpu_setup.md
docs/governance/: baseline-20260716.md  baseline-20260723.md  benchmark-suite.md  config-drift-detection.md  export-capability-matrix.md  export-capability-matrix.yaml  mixture-preservation-manifest.yaml  model-registry.yaml  moe-class-lifecycle.md  performance-gates.md  phase4-5-execution-20260723.md  routing-interpretability.md
docs/plans/: 2026-07-16-yolo-master-governance-optimization.md  2026-07-17-config-drift-detector.md  2026-07-17-export-capability-matrix.md  2026-07-17-molora-routing-aware-merge.md  2026-07-17-mot-scene-aware-router.md  2026-07-17-routing-interpreter-toolkit.md  2026-07-17-standard-benchmark-suite-design.md  2026-07-17-standard-benchmark-suite.md  2026-07-23-yolo-master-next-optimization.md  moa-boundary-vertical-validation.md  moe_aware_peft_plan.md  moe_stable_version_analysis.md
examples/YOLO-Master-Cross-Platform-Edge-Deployment/: .gitignore  README.md  TECHNICAL_REPORT.md
examples/YOLO-Master-Edge-Deployment/: CMakeLists.txt  README.md
examples/YOLO-Master-Edge-Deployment/cpp/: edge_benchmark.cpp  postprocess.cpp  postprocess.h  preprocess.cpp  preprocess.h  preprocess_types.h
examples/YOLO-Master-Edge-Deployment/cpp/backends/: backend.h  backend_factory.cpp  backend_factory.h  mnn_backend.cpp  mnn_backend.h  ncnn_backend.cpp  ncnn_backend.h  onnx_backend.cpp  onnx_backend.h
examples/YOLO-Master-EsMoE-N-ONNX-NCNN-MNN-CPP/: .gitignore  README.md  TECHNICAL_REPORT.md
examples/YOLO-Master-EsMoE-N-ONNX-NCNN-MNN-CPP/cpp/: CMakeLists.txt
examples/YOLO-Master-EsMoE-N-ONNX-NCNN-MNN-CPP/cpp/include/: ort_backend.hpp
examples/YOLO-Master-EsMoE-N-ONNX-NCNN-MNN-CPP/cpp/src/: common.cpp  main.cpp  ort_backend.cpp
examples/YOLO-Master-EsMoE-VisDrone-Edge/: README.md
examples/YOLO-Master-EsMoE-VisDrone-Edge/cpp/: CMakeLists.txt  Dockerfile  Dockerfile.arm64  aarch64-toolchain.cmake
examples/YOLO-Master-EsMoE-VisDrone-Edge/cpp/include/: detector.h  postprocess.h  preprocess.h
examples/YOLO-Master-EsMoE-VisDrone-Edge/cpp/scripts/: cross_compile_check.sh  setup_ort.sh
examples/YOLO-Master-EsMoE-VisDrone-Edge/cpp/src/: main.cpp
examples/YOLOv10-Master-MoA/: README.md  plot_visdrone_curves.py
examples/lora_examples/: README.md  run_lora_brain_tumor_sweep.sh  run_lora_visdrone_sweep.sh  run_yolo_master_lora_rank_sweep.py  yolo_master_brain_tumor_lora.yaml  yolo_master_lora_README.md  yolo_master_lora_rank_sweep_results.csv  yolo_master_lora_results.csv  yolo_master_lora_scenarios_README.md  yolo_master_visdrone_lora.yaml
examples/molora/: basic_finetune.py  compare_coco128.py  compare_coco128_fast.py  compare_lora_molora.py  comparison_report.md  continual_learning.py
examples/mot_moa_ablation/: README.md
model-zoo/: models.json  submission.schema.json
model-zoo/submissions/: example.yaml
reports/: issue-53-coverage-report.md  issue-53-training-validation.md  issues-52-moe-pruning-dynamic-scheduling.md  yolo_master_deep_analysis_20260716.md  yolo_master_moe_moa_mot_peft_analysis_20260723.md
reports/moe-pruning/: alternative-pruning-results.csv  pareto-accuracy-latency.csv  (+2 more)
scripts/: audit_moe_usage.py  bench_moe_micro.py  bench_moe_mps.py  build_issue52_report_assets.py  check_moe_ssot.py  compare_moa_ablation.py  compare_moe_coco128.py  diagnose_mot_routing.py  diagnose_voc_zero_map.py  generate_export_capability_docs.py  issue52_dynamic_schedule_results.csv  issue52_expert_usage_gini.csv  paper_experiment_audit.py  planner_mps_coco128_calibration.py  run_issue52_full.py  run_issue54_pipeline.py  run_moe_dynamic_schedule_ablation.py  run_voc_zero_map_diagnosis.sh  sync_repowiki.py
tests/: ddp_moe_smoke.py  test_adapter_backend_contract.py  test_autobackend_warmup.py  test_autograd_allreduce.py  test_benchmark_suite.py  test_checkpoint_compat.py  test_config_drift_detector.py  test_ddp_checkpoint_coordination.py  test_ddp_error_propagation_e2e.py  test_ddp_lifecycle_ema_nan.py  test_ddp_root_cause_reporting.py  test_default_config_integrity.py  test_engine.py  test_export_capability_matrix.py  test_export_preflight.py  test_export_roundtrip.py  test_issue52_full.py  test_issue53_training_scripts.py  test_latent_mixture.py  test_lora_training_strategy.py  test_lovo_e2e.py  test_master_model_configs.py  test_mixture_aux_loss.py  test_mixture_compile.py  test_mixture_config_registry.py  test_mixture_config_resolution.py  test_mixture_fixes.py  test_mixture_model_registry.py  test_mixture_numeric.py  test_moa.py  test_moa_mot_ddp_math.py  test_moa_mot_ssot.py  test_model_adapter_facade.py  test_model_registry.py  test_moe.py  test_moe_amp_index_add.py  test_moe_aware_peft.py  test_moe_ddp_fixes.py  test_moe_dynamic_schedule.py  test_moe_dynamic_scheduler.py  (+38 more)
tools/: config_drift_detector.py  model_zoo_automation.py  routing_interpreter.py
wiki/: plan.md
wiki-assets/: repowiki.js
wiki-content/: index-en.json  index-zh.json  repowiki-language-map.json
(+1135 files in other folders)
